[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/ui/two_hand_grab_settings_ui.gd" id="1_script"]

[node name="TwoHandGrabSettingsUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleRow" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBoxContainer/TitleRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Two Hand Grab Settings"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer/TitleRow"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "âœ•"
tooltip_text = "Close panel"

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Status: Idle"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ScaleSensitivity" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/ScaleSensitivity"]
layout_mode = 2
text = "Scale Sensitivity"

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/ScaleSensitivity"]
layout_mode = 2
min_value = 0.1
max_value = 3.0
step = 0.1
value = 1.0

[node name="Value" type="Label" parent="Panel/VBoxContainer/ScaleSensitivity"]
layout_mode = 2
text = "1.0"
horizontal_alignment = 2

[node name="RotationSensitivity" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/RotationSensitivity"]
layout_mode = 2
text = "Rotation Sensitivity"

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/RotationSensitivity"]
layout_mode = 2
min_value = 0.1
max_value = 3.0
step = 0.1
value = 1.0

[node name="Value" type="Label" parent="Panel/VBoxContainer/RotationSensitivity"]
layout_mode = 2
text = "1.0"
horizontal_alignment = 2

[node name="Smoothing" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Smoothing"]
layout_mode = 2
text = "Smoothing"

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/Smoothing"]
layout_mode = 2
min_value = 1.0
max_value = 20.0
step = 0.5
value = 10.0

[node name="Value" type="Label" parent="Panel/VBoxContainer/Smoothing"]
layout_mode = 2
text = "10.0"
horizontal_alignment = 2

[node name="Checks" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LockYCheck" type="CheckBox" parent="Panel/VBoxContainer/Checks"]
layout_mode = 2
text = "Lock Y Axis"

[connection signal="value_changed" from="Panel/VBoxContainer/ScaleSensitivity/HSlider" to="." method="_on_scale_slider_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/RotationSensitivity/HSlider" to="." method="_on_rotation_slider_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/Smoothing/HSlider" to="." method="_on_smoothing_slider_value_changed"]
[connection signal="toggled" from="Panel/VBoxContainer/Checks/LockYCheck" to="." method="_on_lock_y_toggled"]
